--- a/ejercicios_practica/1_weight_height.ipynb
+++ b/ejercicios_practica/1_weight_height.ipynb
@@ -1,1 +1,433 @@
-_
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Ea9CPlvttQda"
+   },
+   "source": [
+    "<a href=\"https://www.inove.com.ar\"><img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/PA%20Banner.png\" width=\"1000\" align=\"center\"></a>\n",
+    "\n",
+    "\n",
+    "# Ejercicios de Regresión\n",
+    "\n",
+    "Ejemplo de regresión utilizando el dataset recolecado de pesos y estaturas de personas<br>\n",
+    "\n",
+    "[Dataset source](http://wiki.stat.ucla.edu/socr/index.php/SOCR_Data_Dinov_020108_HeightsWeights)\n",
+    "\n",
+    "v1.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 2333,
+     "status": "ok",
+     "timestamp": 1603765603067,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "xJN8ND5ctQdc"
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import platform\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "v-jK-TsQCwW9"
+   },
+   "source": [
+    "# Recolectar datos\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline1.png\" width=\"1000\" align=\"middle\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 2323,
+     "status": "ok",
+     "timestamp": 1603765603071,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "j9x_YEdTtQeC",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "if os.access('weight_height.csv', os.F_OK) is False:\n",
+    "    if platform.system() == 'Windows':\n",
+    "        !curl https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/weight_height.csv > weight_height.csv\n",
+    "    else:\n",
+    "        !wget weight_height.csv https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/weight_height.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Q5I6l8ZCFaZ8"
+   },
+   "source": [
+    "# Procesar datos\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline2.png\" width=\"1000\" align=\"middle\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 359
+    },
+    "executionInfo": {
+     "elapsed": 2314,
+     "status": "ok",
+     "timestamp": 1603765603072,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "RQgSiWHXFWQD",
+    "outputId": "1e10935e-2055-4d4a-d081-41b6965d7bfb"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno, realice una inspeccion del dataset en búsqueda de elementos faltantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 419
+    },
+    "executionInfo": {
+     "elapsed": 2306,
+     "status": "ok",
+     "timestamp": 1603765603073,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "5AAORpEFw6iI",
+    "outputId": "e9a1b408-eca2-45bc-d4bb-fd57410810e3"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno, en caso de encontrarse elementos faltantes,\n",
+    "# elimine aquellas filas que tengan columnas vacias\n",
+    "# Escriba el procedimiento tenga o no elementos faltantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 204
+    },
+    "executionInfo": {
+     "elapsed": 2299,
+     "status": "ok",
+     "timestamp": 1603765603074,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "yVdxZvGKFvM9",
+    "outputId": "ad8ee7a4-c748-4ac2-be6f-93a3e922471c"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno, inspeccione el dataset, visualice las columnas que posee y sus primeras filas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 204
+    },
+    "executionInfo": {
+     "elapsed": 2293,
+     "status": "ok",
+     "timestamp": 1603765603076,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "NXJ9syd0xfRJ",
+    "outputId": "ab45834a-a63f-4733-e059-60ba2d68abdd"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno: copie los datos a un nuevo dataset (df2), pero ahora transforme las columnas en \n",
+    "# peso --> proveniente de Weight, debe pasar de libras a kilobramos\n",
+    "# altura --> proveniente de Height, debe pasar de pulgadas a metros\n",
+    "# sexo --> masculino (proveniente de Male) y femenino (proveniente de Female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 34
+    },
+    "executionInfo": {
+     "elapsed": 3694,
+     "status": "ok",
+     "timestamp": 1603765604484,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "XPQ2CtCGL3Zn",
+    "outputId": "1008b319-f479-4244-c07b-b7b5bd672dc6"
+   },
+   "outputs": [],
+   "source": [
+    "# Fin de la limpieza, alumno especifique cuantas filas se poseen para analizar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8T_3enyVHYJa"
+   },
+   "source": [
+    "# Explorar datos\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline3.png\" width=\"1000\" align=\"middle\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 279
+    },
+    "executionInfo": {
+     "elapsed": 3688,
+     "status": "ok",
+     "timestamp": 1603765604486,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "tvdCv6nCxZYF",
+    "outputId": "d7d60627-03d6-4a6e-fe2f-d12076bbc301"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno graficar el peso (y) en función de la altura (x) pero para ambos sexos por separados\n",
+    "# Se debe realizar todo en un mismo \"ax\", cada scatter plot con diferente color para ver los dos grupos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 386
+    },
+    "executionInfo": {
+     "elapsed": 3683,
+     "status": "ok",
+     "timestamp": 1603765604489,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "OW81C2zxfH3t",
+    "outputId": "3a834c06-8db1-41b7-81b2-1d18f3da09c4"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno: Dibujar la distribucion (histograma) de la altura en hombres\n",
+    "# Además, imprimir en pantalla el valor medio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 386
+    },
+    "executionInfo": {
+     "elapsed": 3677,
+     "status": "ok",
+     "timestamp": 1603765604491,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "Ko3gQ2CU0lfp",
+    "outputId": "9448a487-2b34-40cb-bfc1-fd66fdb461ed"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno: Dibujar la distribucion (histograma) de la altura en hombres\n",
+    "# Además, imprimir en pantalla el valor medio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 369
+    },
+    "executionInfo": {
+     "elapsed": 4856,
+     "status": "ok",
+     "timestamp": 1603765605679,
+     "user": {
+      "displayName": "Hernán Contigiani",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ggvg04lTitIUU72BS6D299tXlZG8qalV594KkKRfg=s64",
+      "userId": "01142101934719343059"
+     },
+     "user_tz": 180
+    },
+    "id": "TLi1hbpf0ZsV",
+    "outputId": "9781b9f0-a746-4de6-e45c-ebf260c93b91"
+   },
+   "outputs": [],
+   "source": [
+    "# Alumno: porque no prueba la función displot de seaborn que acepta\n",
+    "# \"colorear\" según la categoría deseada.\n",
+    "# Ingresar parámetros= data=df2, x=\"altura\", hue=\"sexo\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "APXYUcIdiDHh"
+   },
+   "source": [
+    "# Entrenar modelo\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline4.png\" width=\"1000\" align=\"middle\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8y9xIL_0iE5N"
+   },
+   "source": [
+    "Alumno:<br>\n",
+    "Para esta regresión se utilizará como variable de entrada el peso (X) y como salida la altura (y). Crear el modelo de regresión lineal que sea de su agrado o invierta las variables de salida y entrada si así lo prefiere. Debe elegir trabajar con los datos de sexo masculino o femenino, o duplicar el trabajo y realizar ambos.<br>\n",
+    "Pasor a seguir:\n",
+    "- Obtener las variables X e y (para masculino y/o femenino)\n",
+    "- Dividir el dataset en train y test 70%30%\n",
+    "- Entrenar un modelo de regresión\n",
+    "- Calcular la métrica r2_score del modelo (y_hat vs y_test)\n",
+    "- Dibujar el resultado de la regresion sobre los datos de entrada\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "L65NqXhOohII"
+   },
+   "source": [
+    "# Validar modelo\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline5.png\" width=\"1000\" align=\"middle\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "C1Ndkl6uopBq"
+   },
+   "source": [
+    "# Utilizar modelo\n",
+    "<img src=\"https://raw.githubusercontent.com/InoveAlumnos/dataset_analytics_python/master/images/Pipeline6.png\" width=\"1000\" align=\"middle\">"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "1_weight_height.ipynb",
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
