Agregar exportar modelo

--- a/ejemplo_clase/2_regresion_lineal.ipynb
+++ b/ejemplo_clase/2_regresion_lineal.ipynb
@@ -966,6 +966,23 @@
     "Aunque ese resultado super al modelo base, se puede seguir trabajando agregando más entradas al modelo (multilineal) o mejorando la clasificación de propiedades antes de someterlas a la regresión lineal.<br>\n",
     "Queda en la voluntad del alumno seguir trabajando, puede ser parte de su proyecto final."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exportar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(lr, open('alquileres.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
