--- a/ejemplo_clase/3_regresion_multilineal.ipynb
+++ b/ejemplo_clase/3_regresion_multilineal.ipynb
@@ -735,6 +735,23 @@
    "source": [
     "En este ejemplo de propiedades se puede notar que agregar más variables/features en consideración que estén vinculados con la salida (target, precio) mejora el modelo."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exportar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(lr, open('alquileres.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
