--- a/ejemplo_clase/4_regresion_polinomial.ipynb
+++ b/ejemplo_clase/4_regresion_polinomial.ipynb
@@ -676,6 +676,23 @@
    "source": [
     "En este ejemplo emisiones de CO2 se puede realizar todos los tipos de regresioens estudiadas hasta el momento, en este caso solo se comparó contra la cilindrada utilizando una gresión polinomial"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exportar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(lr, open('alquileres.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
