--- a/ejemplo_clase/4_regresion_polinomial.ipynb
+++ b/ejemplo_clase/4_regresion_polinomial.ipynb
@@ -691,7 +691,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(lr, open('alquileres.pkl','wb'))"
+    "pickle.dump(lr, open('autosC02.pkl','wb'))"
    ]
   }
  ],
