Agregar referencia de app

--- a/ejemplo_clase/2_regresion_lineal.ipynb
+++ b/ejemplo_clase/2_regresion_lineal.ipynb
@@ -983,6 +983,33 @@
     "import pickle\n",
     "pickle.dump(lr, open('alquileres.pkl','wb'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo de aplicación basada en este notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visitar la siguiente URL\n",
+    "http://inove.pythonanywhere.com/machinelearning/alquileres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Github de referencia\n",
+    "https://github.com/InoveProyectos/machine_learning/tree/main/alquileres_regression"
+   ]
   }
  ],
  "metadata": {
