--- a/ejemplo_clase/1_regresion_lineal.ipynb
+++ b/ejemplo_clase/1_regresion_lineal.ipynb
@@ -11,18 +11,21 @@
     "\n",
     "# Regresión\n",
     "\n",
-    "Ejemplo de regresión multilineal<br>\n",
+    "Ejemplo de regresión lineal<br>\n",
     "v2.0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "f2sWgu-OX6eE"
+    "id": "v5Int47QX0C1"
    },
    "source": [
-    "### Objetivo:\n",
-    "*   Comprender el funcionamiento e implementación de la regresión multilineal.\n"
+    "### Objetivos: \n",
+    "Generar un modelo base sin utilizar Inteligencia Artificial para calcular el precio promedio de un alquiler para compararlo con el resultado del modelo de la Regresión Lineal.\n",
+    "*   Preprocesar los datos (descarga, lectura, limplieza y filtrado)\n",
+    "*  Conocer como funciona la regresión lineal empleando un dataset de propiedades en alquiler.\n",
+    "*   Evaluar el resultado de la regresión lineal aplicada y compararla con el promediador."
    ]
   },
   {
@@ -56,7 +59,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "UhGkULGZ2Z__"
+    "id": "jT0bTbeiLTpd"
    },
    "source": [
     "### Código de descarga del dataset"
@@ -137,7 +140,6 @@
     "# Eliminar todas las filas de la tabla las cuales el campo \"m2\" o \"ambientes\" se encuentre \n",
     "#con datos faltantes\n",
     "# Se hace una copia\n",
-    "\n",
     "df_clean = df.copy()\n",
     "\n",
     "# Para eliminar los datos faltantes, se implementará el método dropna, indicando \n",
@@ -229,6 +231,7 @@
     "# Entre los corcheter especificar la condición de filtrado \n",
     "# --> Accede a la columna moneda df_clean['moneda']\n",
     "# Y para cada valor va a comparar si es igual a 'ARS'\n",
+    "\n",
     "df_ars = df_clean[df_clean['moneda'] == 'ARS']\n",
     "\n",
     "# shape informa de la cantidad de filas y columnas y en la \n",
@@ -336,7 +339,7 @@
    "outputs": [],
    "source": [
     "# Para los valores de X se emplea doble corchete porque necesita la matriz en dos dimensiones\n",
-    "X = propiedades[['m2', 'ambientes']].values\n",
+    "X = propiedades[['m2']].values\n",
     "\n",
     "# Para los valores de y se emplea un corchete porque necesita la matriz en una dimensiones\n",
     "y = propiedades['precio'].values"
@@ -377,10 +380,112 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "z-poA1jPinmC"
+   },
+   "source": [
+    "Ahora generaremos un modelo \"base\", el cual podremos utilizarlo para evaluar en la próxima instancia contra el modelo que construyamos con inteligencia artificial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "23cn4wVFkQC4"
+   },
+   "outputs": [],
+   "source": [
+    "# Modelo base simple\n",
+    "# precio_m2 calcula el promedio \n",
+    "# precio_m2, almacena el resultado de la division de cada y_train y X_train\n",
+    "# promedio_precio_m2, almacena el promedio de los resultados de las divisiones\n",
+    "# Para calcular un precio de alquiler se multiplica los m2 por el precio promedio de alquiler\n",
+    "\n",
+    "precio_m2 = y_train / X_train\n",
+    "promedio_precio_m2 = precio_m2.mean()\n",
+    "y_hat_base = X_test * promedio_precio_m2\n",
+    "print(f\"Precio del m2 promedio: ${promedio_precio_m2:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "51iGrk0dkzSS"
+   },
+   "outputs": [],
+   "source": [
+    "# Gráfico con Matplotlib\n",
+    "plt.scatter(X_test, y_hat_base, color='darkGreen', label='y_hat_model')\n",
+    "\n",
+    "# Mismo gráfico con Seaborn\n",
+    "# X_test[:,0], de los valores de X_test que grafique todos los valores (:) de la y el 0 indica que todos esten en una dimensión \n",
+    "#sns.scatterplot(x=X_test[:,0], y=y_hat_base[:,0], color='darkGreen', label='y_hat_model')\n",
+    "\n",
+    "# Mostrar el gráfico\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Ec1Ys5M_mS0o"
+   },
+   "outputs": [],
+   "source": [
+    "# Se crea el espacio para dibujar con fig = plt.figure()\n",
+    "# Se crea el espacio para el gráfico ax = fig.add_subplot()\n",
+    "# Del DataFrame propiedades accedemos al método plot.scatter para representar m2 y precio reales en un gráfico de dispersión\n",
+    "# De ax accedemos al método scatter para mostrar los m2 y los precios resultados de la predicción del promediador.\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot()\n",
+    "propiedades.plot.scatter(['m2'], ['precio'], color='b', ax=ax)\n",
+    "ax.scatter(X_test, y_hat_base, color='darkGreen', label=\"base model\")\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "I8J6CgdImiqD"
+   },
+   "source": [
+    "Como se observa en el último gráfico, la línea verde aproxima bastante a la distribución de puntos azules, pero debería \"apuntar\" un poco más arriba. En el próximo encuentro discutiremos porque sucede este fenomeno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "USTZDQPemK2G"
+   },
+   "outputs": [],
+   "source": [
+    "# Calcular los errores del modelo base\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "print('Error promedio   MAE - Modelo Base:', mean_absolute_error(y_test, y_hat_base))\n",
+    "print('Error cuadrático MSE - Modelo Base:', mean_squared_error(y_test, y_hat_base))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "H34ta5U8nNL4"
+   },
+   "source": [
+    "Sin utilizar inteligencia artificial, unicamente con nuestro conocimientos sobre los datos y estadística hemos generado un primer modelo base competirá contra los algoritmos de inteligencia artificial que veremos en la siguiente etapa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "UdIRSo5RoW2_"
    },
    "source": [
-    "#### Crear un modelo de regresión multilineallineal"
+    "#### Crear un modelo de regresión lineal simple para constrastar contra el modelo base"
    ]
   },
   {
@@ -396,7 +501,6 @@
     "\n",
     "# Se crea el objeto lr a partir que significa Regresión lineal a partir de la clase LinearRegression()\n",
     "lr = LinearRegression()\n",
-    "\n",
     "\n",
     "# Del objeto lr se puede acceder al método fit con la notación del punto\n",
     "# Necesita los valores de X haciendole un ajuste con reshape para que haga el entrenamiento junto a los \n",
@@ -434,8 +538,28 @@
     "\n",
     "# En este caso, ya que se trata de una regresión lineal puedo relacinonar el\n",
     "# índice R2 con el coeficiente de correlación lineal.\n",
-    " # value:.2f --> :.2f, significa que tendrá dos decimales\n",
     "value = r2_score(y_test, y_hat)\n",
+    "print(f\"Coeficiente de determinación: {value:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "nmIMJQe3pPaJ"
+   },
+   "source": [
+    "Se obtuvo un índice de correlación del 40%, parece bajo, ¿será mejor el modelo base?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "nbDcS8NyqFdq"
+   },
+   "outputs": [],
+   "source": [
+    "value = r2_score(y_test, y_hat_base)\n",
     "print(f\"Coeficiente de determinación: {value:.2f}\")"
    ]
   },
@@ -453,14 +577,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "5Cs3XSZhRfs1"
+    "id": "i2AYgDErQUA-"
    },
    "outputs": [],
    "source": [
-    "# Modelo de Regresión Multilineal\n",
-    "# El array debe tener [['m2', 'ambientes']]\n",
-    "m2 = np.array([[100, 4]])\n",
-    "y_hat_prueba = lr.predict(m2)\n",
+    "# Modelo de Regresión Lineal\n",
+    "m2 = np.array([100])\n",
+    "y_hat_prueba = lr.predict(m2.reshape(-1, 1))\n",
     "y_hat_prueba"
    ]
   },
@@ -480,7 +603,42 @@
     "id": "hLw3dwRQKmYI"
    },
    "source": [
-    "En este ejemplo de propiedades se puede notar que agregar más variables/features en consideración que estén vinculados con la salida (target, precio) puede mejorar el modelo, pero como también no. Lo importante es armar los modelos lineal y multilineal para comparar resultados. Buscando la mejor opción en cuánto a valor final determinado por las métricas."
+    "Con esto concluye el trabajo que se realizará sobre el dataset de \"propiedades\". El mejor resultado que se obtuvo fue un ajuste del 40% utilizando una regresión lineal simple.<br>\n",
+    "Aunque ese resultado supera al modelo base, se puede seguir trabajando agregando más entradas al modelo (multilineal) o mejorando la clasificación de propiedades antes de someterlas a la regresión lineal.<br>\n",
+    "Queda en la voluntad del alumno seguir trabajando, puede ser parte de su proyecto final."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "cCplq8BnXWNM"
+   },
+   "source": [
+    "#### Ejemplo de aplicación basada en este notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "vRdovnaYXWNM"
+   },
+   "outputs": [],
+   "source": [
+    "# Visitar la siguiente URL\n",
+    "#http://inove.pythonanywhere.com/machinelearning/alquileres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "EMUiSJLDXWNM"
+   },
+   "outputs": [],
+   "source": [
+    "# Github de referencia\n",
+    "#https://github.com/InoveProyectos/machine_learning/tree/main/alquileres_regression"
    ]
   }
  ],
